review changes barring enum