@@ -18,7 +18,11 @@ package org.apache.nifi.processors.network;
 
 import org.apache.nifi.components.PropertyDescriptor;
 import org.apache.nifi.flowfile.FlowFile;
+import org.apache.nifi.annotation.behavior.InputRequirement;
+import org.apache.nifi.annotation.behavior.InputRequirement.Requirement;
+import org.apache.nifi.annotation.behavior.SideEffectFree;
 import org.apache.nifi.annotation.behavior.WritesAttribute;
+import org.apache.nifi.annotation.behavior.WritesAttributes;
 import org.apache.nifi.annotation.documentation.CapabilityDescription;
 import org.apache.nifi.annotation.documentation.Tags;
 import org.apache.nifi.processor.AbstractProcessor;
@@ -26,6 +30,7 @@ import org.apache.nifi.processor.ProcessContext;
 import org.apache.nifi.processor.ProcessSession;
 import org.apache.nifi.processor.Relationship;
 import org.apache.nifi.processor.util.StandardValidators;
+import org.apache.nifi.flowfile.attributes.FragmentAttributes;
 import org.apache.nifi.processors.network.util.PCAP;
 import org.apache.nifi.processors.network.util.PCAP.ByteBufferInterface;
 import org.apache.nifi.processors.network.util.PCAP.Packet;
@@ -34,14 +39,27 @@ import java.io.ByteArrayOutputStream;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Set;
+import java.util.UUID;
 
+@SideEffectFree
+@InputRequirement(Requirement.INPUT_REQUIRED)
 @Tags({"PCAP", "Splitter", "Network", "Packet", "Capture", "Wireshark", "TShark"})
 @CapabilityDescription("Splits a pcap file into multiple pcap files based on a maximum size.")
-@WritesAttribute(attribute = SplitPCAP.ERROR_REASON, description = "The reason the flowfile was sent to the failure relationship.")
+@WritesAttributes({
+    @WritesAttribute(attribute = SplitPCAP.ERROR_REASON, description = "The reason the flowfile was sent to the failure relationship."),
+    @WritesAttribute(attribute = "fragment.identifier", description = "All split FlowFiles produced from the same parent FlowFile will have the same randomly generated UUID added for this attribute"),
+    @WritesAttribute(attribute = "fragment.index", description = "A one-up number that indicates the ordering of the split FlowFiles that were created from a single parent FlowFile"),
+    @WritesAttribute(attribute = "fragment.count", description = "The number of split FlowFiles generated from the parent FlowFile"),
+    @WritesAttribute(attribute = "segment.original.filename ", description = "The filename of the parent FlowFile")
+})
 
 public class SplitPCAP extends AbstractProcessor {
 
     protected static final String ERROR_REASON = "ERROR_REASON";
+    public static final String FRAGMENT_ID = FragmentAttributes.FRAGMENT_ID.key();
+    public static final String FRAGMENT_INDEX = FragmentAttributes.FRAGMENT_INDEX.key();
+    public static final String FRAGMENT_COUNT = FragmentAttributes.FRAGMENT_COUNT.key();
+    public static final String SEGMENT_ORIGINAL_FILENAME = FragmentAttributes.SEGMENT_ORIGINAL_FILENAME.key();
 
     public static final PropertyDescriptor PCAP_MAX_SIZE = new PropertyDescriptor
             .Builder().name("PCAP_MAX_SIZE")
@@ -51,19 +69,24 @@ public class SplitPCAP extends AbstractProcessor {
             .addValidator(StandardValidators.INTEGER_VALIDATOR)
             .build();
 
-    public static final Relationship REL_SUCCESS = new Relationship.Builder()
-            .name("success")
-            .description("output flowfiles")
+    public static final Relationship REL_ORIGINAL = new Relationship.Builder()
+            .name("original")
+            .description("The original FlowFile that was split into segments. If the FlowFile fails processing, nothing will be sent to "
+            + "this relationship")
             .build();
-
     public static final Relationship REL_FAILURE = new Relationship.Builder()
             .name("failure")
-            .description("Flowfiles not parseable as pcap.")
+            .description("If a FlowFile cannot be transformed from the configured input format to the configured output format, "
+            + "the unchanged FlowFile will be routed to this relationship.")
+            .build();
+    public static final Relationship REL_SPLIT = new Relationship.Builder()
+            .name("split")
+            .description("The individual 'segments' of the original FlowFile will be routed to this relationship.")
             .build();
 
     private static final List<PropertyDescriptor> DESCRIPTORS = List.of(PCAP_MAX_SIZE);
 
-    private static final Set<Relationship> RELATIONSHIPS = Set.of(REL_SUCCESS, REL_FAILURE);
+    private static final Set<Relationship> RELATIONSHIPS = Set.of(REL_ORIGINAL, REL_FAILURE, REL_SPLIT);
 
     @Override
     public Set<Relationship> getRelationships() {
@@ -98,48 +121,49 @@ public class SplitPCAP extends AbstractProcessor {
         final byte[] contentByteArray = contentBytes.toByteArray();
 
         if(contentByteArray.length == 0){
-            session.putAttribute(flowFile,ERROR_REASON, "PCAP file empty.");
+            session.putAttribute(flowFile, ERROR_REASON, "PCAP file empty.");
             session.transfer(flowFile, REL_FAILURE);
             return;
         }
 
-        PCAP parsedPcap;
-        PCAP templatePcap;
+        final PCAP parsedPcap;
+        final PCAP templatePcap;
 
         // Parse the pcap file and create a template pcap object to borrow the header from.
-        try{
+        try {
             parsedPcap = new PCAP(new ByteBufferInterface(contentByteArray));
 
             // Recreating rather than using deepcopy as recreating is more efficient in this case.
             templatePcap = new PCAP(new ByteBufferInterface(contentByteArray));
 
         } catch (Exception e){
-            session.putAttribute(flowFile,ERROR_REASON, "PCAP file not parseable.");
+            session.putAttribute(flowFile, ERROR_REASON, "PCAP file not parseable.");
             session.transfer(flowFile, REL_FAILURE);
             return;
         }
 
-        var unprocessedPackets = parsedPcap.packets();
+        final List<Packet> unprocessedPackets = parsedPcap.packets();
 
         int currentPacketCollectionSize = 0;
         int totalFlowfileCount = 1;
         int packetHeaderLength = 24;
+        List<FlowFile> splitFilesList = new ArrayList<>();
 
-        ArrayList<Packet> newPackets = new ArrayList<>();
+        List<Packet> newPackets = new ArrayList<>();
         templatePcap.packets().clear();
 
 
         // Loop through all packets in the pcap file and split them into smaller pcap files.
         while (!unprocessedPackets.isEmpty()){
-            var packet = unprocessedPackets.get(0);
+            Packet packet = unprocessedPackets.getFirst();
 
             if (packet.inclLen() > pcapMaxSize){
-                session.putAttribute(flowFile,ERROR_REASON, "PCAP contains a packet larger than the max size.");
+                session.putAttribute(flowFile, ERROR_REASON, "PCAP contains a packet larger than the max size.");
                 session.transfer(flowFile, REL_FAILURE);
                 return;
             }
 
-            if (currentPacketCollectionSize + (packet.inclLen() + packetHeaderLength) > pcapMaxSize && currentPacketCollectionSize > 0){
+            if (currentPacketCollectionSize + (packet.inclLen() + packetHeaderLength) > pcapMaxSize && currentPacketCollectionSize > 0) {
                 templatePcap.packets().addAll(newPackets);
                 var newFlowFile = session.create(flowFile);
 
@@ -151,7 +175,8 @@ public class SplitPCAP extends AbstractProcessor {
                     flowFile.getAttribute("filename").split("\\.")[0] + "-" + totalFlowfileCount + ".pcap"
                 );
 
-                session.transfer(newFlowFile, REL_SUCCESS);
+                splitFilesList.add(newFlowFile);
+
                 totalFlowfileCount += 1;
 
                 newPackets = new ArrayList<>();
@@ -161,7 +186,7 @@ public class SplitPCAP extends AbstractProcessor {
             } else {
                 newPackets.add(packet);
                 currentPacketCollectionSize += ((int) packet.inclLen() + packetHeaderLength);
-                unprocessedPackets.remove(0);
+                unprocessedPackets.removeFirst();
             }
         }
 
@@ -176,9 +201,23 @@ public class SplitPCAP extends AbstractProcessor {
             );
 
             session.write(newFlowFile, out -> out.write(templatePcap.readBytesFull()));
-            session.transfer(newFlowFile, REL_SUCCESS);
+            splitFilesList.add(newFlowFile);
         }
 
-        session.remove(flowFile);
+        final String fragmentId = UUID.randomUUID().toString();
+
+        int fragmentIndex = 0;
+        final String originalFileName = flowFile.getAttribute("filename");
+
+        for(FlowFile split : splitFilesList){
+            session.putAttribute(split, FRAGMENT_COUNT, String.valueOf(splitFilesList.size()));
+            session.putAttribute(split, FRAGMENT_ID, fragmentId);
+            session.putAttribute(split, FRAGMENT_INDEX, Integer.toString(fragmentIndex));
+            session.putAttribute(split, SEGMENT_ORIGINAL_FILENAME, originalFileName);
+            fragmentIndex++;
+            session.transfer(split, REL_SPLIT);
+        }
+
+        session.transfer(flowFile, REL_ORIGINAL);
     }
 }
